--- a/mobile/src/main/res/layout/activity_workout_history.xml
+++ b/mobile/src/main/res/layout/activity_workout_history.xml
@@ -4,7 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/workouts_recycle_view"
     android:layout_width="match_parent"
-    android:layout_height="0dp"
+    android:layout_height="wrap_content"
     android:layout_margin="8dp"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.ksenia.pulsezonetraining.MainActivity"
