--- a/mobile/src/main/res/layout/history_list_item.xml
+++ b/mobile/src/main/res/layout/history_list_item.xml
@@ -1,11 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     style="separator"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:clickable="true"
+    android:focusable="true"
+    android:foreground="?android:attr/selectableItemBackground">
 
+    <TextView
+        android:id="@+id/zone_textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:text="Aerobic"
+        android:textColor="@color/colorAccent"
+        android:textSize="18sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/date_textView"
@@ -14,20 +29,10 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:text="29 WED"
-        android:textSize="18sp"
+        android:textColor="@color/textColorPrimary"
+        android:textSize="14sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/start_time_textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="8dp"
-        android:text="16:00"
-        android:textSize="18sp"
-        app:layout_constraintStart_toEndOf="@+id/date_textView"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/zone_textView" />
 
     <TextView
         android:id="@+id/calories_textView"
@@ -37,32 +42,35 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:text="100 kcal"
+        android:textColor="@color/textColorPrimary"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/date_textView"
-        app:layout_constraintVertical_bias="0.181" />
+        app:layout_constraintTop_toBottomOf="@+id/date_textView" />
 
     <TextView
         android:id="@+id/duration_textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginStart="16dp"
+        android:layout_marginStart="4dp"
         android:layout_marginTop="8dp"
         android:text="in 30:42"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/calories_textView"
-        app:layout_constraintTop_toBottomOf="@+id/start_time_textView" />
+        android:textColor="@color/textColorPrimary"
+        app:layout_constraintStart_toEndOf="@+id/text_in_between_textView"
+        app:layout_constraintTop_toBottomOf="@+id/date_textView" />
 
     <TextView
-        android:id="@+id/av_hr_textView"
+        android:id="@+id/text_in_between_textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginStart="16dp"
+        android:layout_marginStart="4dp"
         android:layout_marginTop="8dp"
-        android:text="average hr: 140 bpm"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/duration_textView"
-        app:layout_constraintTop_toBottomOf="@+id/start_time_textView" />
+        android:text="kcal in"
+        android:textColor="@color/textColorPrimary"
+        app:layout_constraintEnd_toStartOf="@+id/duration_textView"
+        app:layout_constraintHorizontal_bias="0.046"
+        app:layout_constraintHorizontal_chainStyle="spread_inside"
+        app:layout_constraintStart_toEndOf="@+id/calories_textView"
+        app:layout_constraintTop_toBottomOf="@+id/date_textView" />
+
+
 </android.support.constraint.ConstraintLayout>
