Expandable  list view added

--- a/mobile/src/main/res/layout/activity_workout_statistic.xml
+++ b/mobile/src/main/res/layout/activity_workout_statistic.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    tools:context=".Activity_WorkoutStatistics">
+    tools:context=".ui.Activity_WorkoutStatistics">
 
     <TextView
         android:id="@+id/textView_workoutStatus"
