--- a/mobile/src/main/res/layout-land/activity_main.xml
+++ b/mobile/src/main/res/layout-land/activity_main.xml
@@ -15,7 +15,7 @@
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
+            android:layout_height="match_parent"
             android:background="?attr/colorPrimary"
             app:popupTheme="@style/AppTheme.PopupOverlay">
 
@@ -33,6 +33,7 @@
     </android.support.design.widget.AppBarLayout>
 
     <include
+        android:id="@+id/include"
         layout="@layout/activity_workout_history" />
 
     <android.support.design.widget.FloatingActionButton
@@ -41,6 +42,10 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
-        app:srcCompat="@android:drawable/ic_input_add" />
+        app:layout_anchor="@+id/include"
+        app:layout_anchorGravity="right|bottom"
+        app:srcCompat="@android:drawable/ic_input_add"
+        tools:layout_editor_absoluteX="142dp"
+        tools:layout_editor_absoluteY="145dp" />
 
 </android.support.design.widget.CoordinatorLayout>
