--- a/mobile/src/main/res/layout-small/activity_main.xml
+++ b/mobile/src/main/res/layout-small/activity_main.xml
@@ -15,7 +15,7 @@
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
+            android:layout_height="26dp"
             android:background="?attr/colorPrimary"
             app:popupTheme="@style/AppTheme.PopupOverlay">
 
@@ -24,7 +24,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="end"
-                android:background="@mipmap/baseline_account_circle_white_36"
+                android:background="@mipmap/baseline_account_circle_white_18"
                 android:contentDescription="@string/content_descr_account_settings" />
 
         </android.support.v7.widget.Toolbar>
@@ -33,14 +33,19 @@
     </android.support.design.widget.AppBarLayout>
 
     <include
+        android:id="@+id/include"
         layout="@layout/activity_workout_history" />
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="24dp"
+        android:layout_height="24dp"
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
-        app:srcCompat="@android:drawable/ic_input_add" />
+        app:layout_anchor="@+id/include"
+        app:layout_anchorGravity="right|bottom"
+        app:srcCompat="@android:drawable/ic_input_add"
+        tools:layout_editor_absoluteX="147dp"
+        tools:layout_editor_absoluteY="147dp" />
 
 </android.support.design.widget.CoordinatorLayout>
