--- a/mobile/src/main/res/layout/activity_pulse_zone_fitness.xml
+++ b/mobile/src/main/res/layout/activity_pulse_zone_fitness.xml
@@ -7,110 +7,128 @@ with this license.
 Copyright (c) Dynastream Innovations Inc. 2013
 All rights reserved.
 -->
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+<android.support.constraint.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".Activity_PulseZonesFitness">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/linearLayout_TitleAndStatus"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_alignParentTop="true"
+    android:layout_centerHorizontal="true"
+    android:orientation="vertical"
+    tools:context=".ui.Activity_PulseZonesFitness">
 
-    <LinearLayout
-        android:id="@+id/linearLayout_TitleAndStatus"
+    <TextView
+        android:id="@+id/textView_ZoneStatus"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:orientation="vertical" >
-
-        <TextView
-            android:id="@+id/textView_ZoneStatus"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/status_text_view"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:textStyle="italic" />
-
-    </LinearLayout>
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:gravity="center_vertical|center_horizontal|center"
+        android:text="@string/status_text_view"
+        android:textColor="@color/textColorPrimary"
+        android:textSize="18sp"
+        app:layout_constraintBottom_toTopOf="@+id/scrollView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.495"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ScrollView
         android:id="@+id/scrollView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/linearLayout_TitleAndStatus" >
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/textView_ZoneStatus">
 
-        <LinearLayout
+        <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:orientation="vertical" >
+            android:orientation="vertical">
 
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="#D7D7D7"
-                android:paddingBottom="3dp"
-                android:paddingTop="3dp" >
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentStart="true"
-                    android:layout_marginBottom="5dp"
-                    android:textStyle="bold"
-                    android:text="@string/heart_rate_text_view"
-                    android:layout_toStartOf="@+id/textView_HeartRatePulseZone"/>
-
-                <TextView
-                    android:id="@+id/textView_HeartRatePulseZone"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentEnd="true"
-                    android:textStyle="bold"
-                    android:text="@string/heart_rate_value_text_view" />
-
-            </RelativeLayout>
-
-            <com.ksenia.pulsezonetraining.CustomChronometer
+            <com.ksenia.pulsezonetraining.ui.custom.CustomChronometer
                 android:id="@+id/chronometer"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:gravity="center_vertical|center_horizontal|center"
-                android:padding="10dp"
-                android:textAlignment="center" />
+                android:layout_alignParentStart="true"
+                android:layout_alignParentTop="true"
+                android:layout_marginStart="56dp"
+                android:layout_marginTop="16dp"
+                android:padding="8dp"
+                android:textAlignment="center"
+                android:textSize="24sp"
+                android:textStyle="normal"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <pl.droidsonroids.gif.GifImageView
+                android:id="@+id/gifImageView"
+                android:layout_width="91dp"
+                android:layout_height="80dp"
+                android:layout_marginEnd="40dp"
+                android:src="@drawable/beating_heart"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/textView_HeartRatePulseZone"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignBaseline="@+id/chronometer"
+                android:layout_alignBottom="@+id/chronometer"
+                android:layout_alignParentEnd="true"
+                android:layout_marginTop="16dp"
+                android:padding="8dp"
+                android:text="@string/heart_rate_value_text_view"
+                android:textSize="24sp"
+                android:textStyle="bold"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.672"
+                app:layout_constraintStart_toEndOf="@+id/chronometer"
+                app:layout_constraintTop_toTopOf="parent" />
 
             <com.github.mikephil.charting.charts.LineChart
                 android:id="@+id/graph"
                 android:layout_width="match_parent"
-                android:layout_height="200dip" />
+                android:layout_height="200dip"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/gifImageView" />
 
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="214dp"
-                android:layout_gravity="fill_vertical"
-                android:paddingBottom="3dp"
-                android:paddingTop="3dp">
 
-                <android.support.design.widget.FloatingActionButton
-                    android:id="@+id/button_pause"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerHorizontal="true"
-                    android:layout_margin="@dimen/fab_margin"
-                    app:srcCompat="@drawable/baseline_pause_24" />
+            <android.support.design.widget.FloatingActionButton
+                android:id="@+id/button_pause"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:layout_centerHorizontal="true"
+                android:layout_marginEnd="140dp"
+                android:layout_marginStart="140dp"
+                android:layout_marginTop="32dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/graph"
+                app:srcCompat="@drawable/baseline_pause_24" />
 
-                <android.support.design.widget.FloatingActionButton
-                    android:id="@+id/button_stop"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentBottom="true"
-                    android:layout_centerHorizontal="true"
-                    android:layout_margin="@dimen/fab_margin"
-                    app:srcCompat="@drawable/baseline_stop_24" />
+            <android.support.design.widget.FloatingActionButton
+                android:id="@+id/button_stop"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:layout_centerHorizontal="true"
+                android:layout_marginEnd="140dp"
+                android:layout_marginStart="140dp"
+                android:layout_marginTop="32dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/button_pause"
+                app:srcCompat="@drawable/baseline_stop_24" />
 
-            </RelativeLayout>
-
-        </LinearLayout>
+        </android.support.constraint.ConstraintLayout>
 
     </ScrollView>
 
-</RelativeLayout>
+</android.support.constraint.ConstraintLayout>
