--- a/mobile/src/main/res/layout/activity_workout_history.xml
+++ b/mobile/src/main/res/layout/activity_workout_history.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/workouts_recycle_view"
@@ -7,7 +8,12 @@
     android:layout_height="wrap_content"
     android:layout_margin="8dp"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.ksenia.pulsezonetraining.MainActivity"
-    tools:showIn="@layout/activity_main">>
+    tools:context="com.ksenia.pulsezonetraining.ui.MainActivity"
+    tools:showIn="@layout/activity_main">
 
-</android.support.v7.widget.RecyclerView>
+    <ExpandableListView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/expandable_list_view"></ExpandableListView>
+
+</RelativeLayout>
