Incomplete refactoring of Bluetooth/ANT+ implementation

--- a/mobile/src/main/res/layout/activity_workout_history.xml
+++ b/mobile/src/main/res/layout/activity_workout_history.xml
@@ -14,6 +14,6 @@
     <ExpandableListView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/expandable_list_view"></ExpandableListView>
+        android:id="@+id/expandable_list_view"/>
 
 </RelativeLayout>
