--- a/mobile/src/main/res/layout/activity_pulse_zone_fitness.xml
+++ b/mobile/src/main/res/layout/activity_pulse_zone_fitness.xml
@@ -19,27 +19,42 @@ All rights reserved.
     android:orientation="vertical"
     tools:context=".ui.Activity_PulseZonesFitness">
 
+    <android.support.design.widget.AppBarLayout
+        android:id="@+id/app_bar_workout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:theme="@style/AppTheme.AppBarOverlay">
+
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar_workout"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:background="?attr/colorPrimary"
+            app:popupTheme="@style/AppTheme.PopupOverlay">
+
+        </android.support.v7.widget.Toolbar>
+
+    </android.support.design.widget.AppBarLayout>
+
     <TextView
         android:id="@+id/textView_ZoneStatus"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
         android:gravity="center_vertical|center_horizontal|center"
         android:text="@string/status_text_view"
         android:textColor="@color/textColorPrimary"
         android:textSize="18sp"
-        app:layout_constraintBottom_toTopOf="@+id/scrollView"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/app_bar_workout" />
 
     <ScrollView
         android:id="@+id/scrollView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
         app:layout_constraintTop_toBottomOf="@+id/textView_ZoneStatus">
 
         <android.support.constraint.ConstraintLayout
@@ -55,12 +70,14 @@ All rights reserved.
                 android:layout_height="wrap_content"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentTop="true"
-                android:layout_marginStart="56dp"
-                android:layout_marginTop="16dp"
+                android:layout_marginEnd="80dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="24dp"
                 android:padding="8dp"
                 android:textAlignment="center"
                 android:textSize="24sp"
                 android:textStyle="normal"
+                app:layout_constraintEnd_toStartOf="@+id/gifImageView"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
@@ -68,7 +85,8 @@ All rights reserved.
                 android:id="@+id/gifImageView"
                 android:layout_width="91dp"
                 android:layout_height="80dp"
-                android:layout_marginEnd="40dp"
+                android:layout_marginEnd="28dp"
+                android:layout_marginTop="8dp"
                 android:src="@drawable/beating_heart"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -80,15 +98,20 @@ All rights reserved.
                 android:layout_alignBaseline="@+id/chronometer"
                 android:layout_alignBottom="@+id/chronometer"
                 android:layout_alignParentEnd="true"
-                android:layout_marginTop="16dp"
+                android:layout_marginBottom="8dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
                 android:padding="8dp"
                 android:text="@string/heart_rate_value_text_view"
                 android:textSize="24sp"
                 android:textStyle="bold"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.672"
-                app:layout_constraintStart_toEndOf="@+id/chronometer"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintBottom_toBottomOf="@+id/gifImageView"
+                app:layout_constraintEnd_toEndOf="@+id/gifImageView"
+                app:layout_constraintHorizontal_bias="0.516"
+                app:layout_constraintStart_toStartOf="@+id/gifImageView"
+                app:layout_constraintTop_toTopOf="@+id/gifImageView"
+                app:layout_constraintVertical_bias="0.533" />
 
             <com.github.mikephil.charting.charts.LineChart
                 android:id="@+id/graph"
@@ -107,7 +130,7 @@ All rights reserved.
                 android:layout_centerHorizontal="true"
                 android:layout_marginEnd="140dp"
                 android:layout_marginStart="140dp"
-                android:layout_marginTop="32dp"
+                android:layout_marginTop="8dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/graph"
@@ -121,7 +144,7 @@ All rights reserved.
                 android:layout_centerHorizontal="true"
                 android:layout_marginEnd="140dp"
                 android:layout_marginStart="140dp"
-                android:layout_marginTop="32dp"
+                android:layout_marginTop="24dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/button_pause"
