--- a/mobile/src/main/res/layout/activity_multidevice_scan.xml
+++ b/mobile/src/main/res/layout/activity_multidevice_scan.xml
@@ -31,25 +31,11 @@ All rights reserved.
     </android.support.design.widget.AppBarLayout>
 
     <TextView
-        android:id="@+id/textView_AlreadyConnectedTitle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="10dp"
-        android:text="@string/label_alreadyConnected"
-        android:textAppearance="@android:style/TextAppearance.Medium"
-        android:textStyle="bold"
-        android:visibility="gone" />
-
-    <ListView
-        android:id="@+id/listView_AlreadyConnectedDevices"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:visibility="gone" />
-
-    <TextView
         android:id="@+id/textView_FoundDeviceTitle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/app_bar_ant"
         android:padding="16dp"
         android:text="@string/label_foundDevices"
         android:textColor="@color/textColorPrimary"
@@ -57,6 +43,7 @@ All rights reserved.
 
     <ListView
         android:id="@+id/listView_FoundDevices"
+        android:layout_toEndOf="@id/textView_FoundDeviceTitle"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content" />
 
