--- a/mobile/src/main/res/layout/activity_pulse_zone_fitness.xml
+++ b/mobile/src/main/res/layout/activity_pulse_zone_fitness.xml
@@ -19,16 +19,24 @@ All rights reserved.
     android:orientation="vertical"
     tools:context=".ui.Activity_PulseZonesFitness">
 
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/toolbar_workout"
+    <android.support.design.widget.AppBarLayout
+        android:id="@+id/app_bar_workout"
         android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        android:background="?attr/colorPrimary"
-        app:popupTheme="@style/AppTheme.PopupOverlay"
-        app:layout_constraintTop_toTopOf="parent">
-    </android.support.v7.widget.Toolbar>
+        android:layout_height="wrap_content"
+        android:theme="@style/AppTheme.AppBarOverlay">
 
-    <TextView
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar_workout"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:background="?attr/colorPrimary"
+            app:popupTheme="@style/AppTheme.PopupOverlay">
+
+        </android.support.v7.widget.Toolbar>
+
+    </android.support.design.widget.AppBarLayout>
+
+       <TextView
         android:id="@+id/textView_ZoneStatus"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -41,7 +49,7 @@ All rights reserved.
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar_workout" />
+        app:layout_constraintTop_toBottomOf="@+id/app_bar_workout" />
 
     <ScrollView
         android:id="@+id/scrollView"
