--- a/mobile/src/main/res/menu/menu_training.xml
+++ b/mobile/src/main/res/menu/menu_training.xml
@@ -6,9 +6,9 @@
 
     <item
         android:id="@+id/action_vibration_settings"
-        android:icon="@drawable/baseline_more_vert_24"
+        android:icon="@drawable/baseline_vibration_24"
         android:orderInCategory="300"
-        android:title="Turn OFF vibration"
-        app:showAsAction="never"/>
+        android:title="@string/turn_off_vibration"
+        app:showAsAction="ifRoom"/>
 
 </menu>
